--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,53 +1,61 @@
-image: barichello/godot-ci:3.1.1
+image: bemyak/godot-ci:3.1.1
 
 variables:
-  EXPORT_NAME: gameoff
+  EXPORT_NAME: game_name
 
 stages:
   - export
   - deploy
 
-before_script:
-  - mkdir -v -p build/linux
-  - mkdir -v -p build/windows
-  - mkdir -v -p build/mac
-  - mkdir -v -p build/web
-
 linux:
   stage: export
   script:
-    - godot -v --export "Linux/X11" ./build/linux/$EXPORT_NAME.x86_64
+    - mkdir -v -p build/linux
+    - godot -v --export "Linux/X11" ./build/linux/${EXPORT_NAME}.x86_64
   artifacts:
-    name: $EXPORT_NAME-$CI_JOB_NAME
+    name: ${EXPORT_NAME}-${CI_JOB_NAME}
     paths:
       - build/linux
 
 windows:
   stage: export
   script:
-    - godot -v --export "Windows Desktop" ./build/windows/$EXPORT_NAME.exe
+    - mkdir -v -p build/windows
+    - godot -v --export "Windows Desktop" ./build/windows/${EXPORT_NAME}.exe
   artifacts:
-    name: $EXPORT_NAME-$CI_JOB_NAME
+    name: ${EXPORT_NAME}-${CI_JOB_NAME}
     paths:
       - build/windows
 
 mac:
   stage: export
   script:
-    - godot -v --export "Mac OSX" ./build/mac/$EXPORT_NAME.zip
+    - mkdir -v -p build/mac
+    - godot -v --export "Mac OSX" ./build/mac/${EXPORT_NAME}.zip
   artifacts:
-    name: $EXPORT_NAME-$CI_JOB_NAME
+    name: ${EXPORT_NAME}-${CI_JOB_NAME}
     paths:
       - build/mac
 
 web:
   stage: export
   script:
+    - mkdir -v -p build/web
     - godot -v --export "HTML5" ./build/web/index.html
   artifacts:
-    name: $EXPORT_NAME-$CI_JOB_NAME
+    name: ${EXPORT_NAME}-${CI_JOB_NAME}
     paths:
       - build/web
+
+android:
+  stage: export
+  script:
+    - mkdir -v -p build/android
+    - godot -v --export "Anroid" ./build/android/${EXPORT_NAME}.apk
+  artifacts:
+    name: ${EXPORT_NAME}-${CI_JOB_NAME}
+    paths:
+      - build/android
 
 # Use project root to deploy for the gh-pages branch
 deploy-github-pages:
@@ -62,5 +70,5 @@ deploy-github-pages:
     - git config user.name $GIT_USERNAME
     - git remote add github $REMOTE_URL
     - git add -A
-    - 'git commit -m "ci: Deploy GitHub Page $EXPORT_NAME-$CI_JOB_NAME$" -m "Deploy from GitLab pipeline \#$CI_PIPELINE_ID"'
+    - 'git commit -m "ci: Deploy GitHub Page ${EXPORT_NAME}-${CI_JOB_NAME}$" -m "Deploy from GitLab pipeline \#${CI_PIPELINE_ID}"'
     - git push github gh-pages -f
