--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: bemyak/godot-ci:3.1.1
+image: bemyak/godot-ci:3.2
 
 variables:
   EXPORT_NAME: game_name
@@ -51,7 +51,7 @@ android:
   stage: export
   script:
     - mkdir -v -p build/android
-    - godot -v --export "Anroid" ./build/android/${EXPORT_NAME}.apk
+    - godot -v --export "Android" ./build/android/${EXPORT_NAME}.apk
   artifacts:
     name: ${EXPORT_NAME}-${CI_JOB_NAME}
     paths:
